# optima-vis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/internal/models/: gif_properties.py  neural_network_model.py  nn_model.py
src/internal/services/animation_generator/: optimizer_animation_generator.py
src/internal/services/contour_generator/: loss_contour_generator.py
src/internal/services/plot_generator/: loss_contour_generator.py  optimizer_plot_generator.py
src/optima_vis/: __init__.py
src/optima_vis/models/: gif_properties.py  video_properties.py
src/optima_vis/services/animation_generator/: optimizer_animation_generator.py
src/optima_vis/services/plot_generator/: loss_contour_generator.py  optimizer_plot_generator.py
tests/: test_contour_generator.py  test_loss_contour_generator.py  test_optimizer_animation_generator.py  test_optimizer_animation_generator_complex.py  test_optimizer_plot_generator.py
