[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optima_vis"
version = "1.4.2"
description = "A visualization tool for neural network optimizers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pytest>=8.4.2",
    "torch>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/usernamenenad/optima-vis"
"Bug Tracker" = "https://github.com/usernamenenad/optima-vis/issues"
